<resources>
    <string name="app_name">LoginExample</string>
    <string name="todo" />
    <string name="markefy">Markefy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="icon">icon</string>
    <string name="email_or_username">Email or Username</string>
    <string name="or_sign_in_with">or sign in with</string>
</resources>